fix #2055 landing read more unreadable when only focused

--- a/web/src/components/pages/landing/landing.css
+++ b/web/src/components/pages/landing/landing.css
@@ -133,10 +133,6 @@
                 min-width: auto;
             }
 
-            &:focus {
-                background: var(--white);
-            }
-
             & svg {
                 margin-left: 15px;
                 width: 20px;
